# jd-sync

./: CMakeLists.txt  README.md
src/jd-sync/client/: CMakeLists.txt  MonitorModel.cpp  MonitorModel.h  Ping.cpp  Ping.h  ServiceDiscoveryModel.cpp  ServiceDiscoveryModel.h  SyncedList.cpp  SyncedList.h  TcpClientActor.cpp  TcpClientActor.h
src/jd-sync/client/lists/: AbstractRecordList.cpp  AbstractRecordList.h  ChangeTrackingList.cpp  ChangeTrackingList.h  FilteredList.cpp  FilteredList.h  RecordListModel.cpp  RecordListModel.h  SyncedList.cpp  SyncedList.h
src/jd-sync/common/: AbstractActor.cpp  AbstractActor.h  AbstractExternalActor.cpp  AbstractExternalActor.h  AbstractThreadedActor.cpp  AbstractThreadedActor.h  CMakeLists.txt  CRUDMessages.cpp  CRUDMessages.h  Filter.cpp  Filter.h  Message.cpp  Message.h  MessageHub.cpp  MessageHub.h  Request.cpp  Request.h  RequestWaiter.cpp  RequestWaiter.h  TcpUtils.cpp  TcpUtils.h
src/jd-sync/gui/: CMakeLists.txt  SyncedCheckBox.cpp  SyncedCheckBox.h  SyncedDateEdit.cpp  SyncedDateEdit.h  SyncedDateTimeEdit.cpp  SyncedDateTimeEdit.h  SyncedLineEdit.cpp  SyncedLineEdit.h  SyncedWidgetActor.cpp  SyncedWidgetActor.h  SyncedWidgetsGroup.cpp  SyncedWidgetsGroup.h
src/jd-sync/server/: CMakeLists.txt  ServiceAnnouncer.cpp  ServiceAnnouncer.h  SyncableList.cpp  SyncableList.h
src/jd-sync/server/tcp/: TcpClientConnection.cpp  TcpClientConnection.h  TcpServer.cpp  TcpServer.h
src/jd-sync/server/websocket/: WebSocketServer.h
src/jd-tablesync/client/: AbstractConsumer.cpp  AbstractConsumer.h  CMakeLists.txt  MonitorModel.cpp  MonitorModel.h  ServerConnection.cpp  ServerConnection.h  ServiceDiscoveryModel.cpp  ServiceDiscoveryModel.h  SyncedList.cpp  SyncedList.h
src/jd-tablesync/common/: TcpUtils.cpp
src/jd-tablesync/server/: AbstractClientConnection.cpp  AbstractClientConnection.h  CMakeLists.txt  ConnectionManager.cpp  ConnectionManager.h  ObjectWithId.h  ServiceAnnouncer.cpp  ServiceAnnouncer.h  SyncableList.cpp  SyncableList.h  TcpClientConnection.cpp  TcpClientConnection.h  TcpServer.cpp  TcpServer.h  WebSocketClientConnection.cpp  WebSocketClientConnection.h
src/jd-tablesync/server/tcp/: TcpClientConnection.cpp  TcpClientConnection.h  TcpServer.cpp  TcpServer.h
src/jd-tablesync/server/websocket/: WebSocketServer.cpp
test/: CMakeLists.txt
test/common/: DummyActor.h  tst_Message.cpp  tst_MessageHubActor.cpp  tst_Request.cpp
